# trakmod

./: .gitignore  LICENSE  README.md  pyproject.toml
changelog/: 2.misc  _template.rst.jinja
disbase/: __init__.py  _info.py  assets.py  errors.py  file.py  guild.py  mixins.py  state.py  user.py
disbase/app/: __init__.py  gateway.py  rest.py
disbase/internal/: __init__.py  events.py  logs.py
disbase/internal/gateway/: __init__.py  manager.py  shard.py
disbase/internal/http/: __init__.py  emoji.py  guild.py
disbase/mod/: __init__.py  extensions.py
element/: __init__.py  banner.element  rest.py  state.py  user.py  utils.py
element/internal/: __init__.py  banner.py  blocks.py  http.py
trak/: __init__.py  _info.py  assets.py  errors.py  guild.py  mixins.py  state.py  user.py  utils.py
trak/app/: __init__.py  gateway.py  rest.py
trak/internal/: __init__.py  logs.py
trak/internal/gateway/: __init__.py  cluster.py  manager.py  shard.py
trak/internal/http/: __init__.py  emoji.py  guild.py
trak/mod/: __init__.py  extensions.py
